# scorpio_zadanie_rekrutacyjne_software

./: CMakeLists.txt  speeds.txt  speeds_optimized.txt
include/: topics.h
include/speed_controller/: pid.hpp
launch/: virtual_dc_motor.launch
scripts/: calculate.py
src/: pid.cpp  rpm.cpp  speed_controller.cpp  speed_data_collector.cpp
